# galaxy

./: .clang-format  .clang-tidy  .codedocs  .gitattributes  .gitignore  .gitmodules  .travis.yml  .travis.yml.wip  CA.ruleset  CMakeLists.txt  CMakeSettings.json  CODE REVIEWS.txt  CODE_STYLE.md  CONTRIBUTING.md  CREDITS.md  CodeAnalysis.ruleset  Credits.txt  DESIGN.md  DOCS.txt  Doxyfile  ExampleEntity.lua  IDEAS.txt  LICENSE  LICENSE.txt  LINKS.txt  PATCH.txt  Quasar.sln  README.md  README_CELESTIAL.md  README_frb.md  README_protostar.md  README_pulsar.md  README_starlight.md  RESEARCH.md  RESEARCH.txt  REngine3.sln  Restructure.txt  SECURITY.md  STYLE.txt  TODO-PROJECT.txt  (+1577 more)
dependencies/: CMakeLists.txt  README.md  dependencies.vcxproj  dependencies.vcxproj.filters
dependencies/Box2D-MT/: GALAXY_CHANGES.txt  LICENSE.txt
dependencies/Box2D-MT/Box2D/: Box2D.h
dependencies/C++20/: jthread-LICENSE.txt
dependencies/C++20/include/: barrier  semaphore
dependencies/base64/: base64.hpp
dependencies/c++20/: LICENSE-atomic.txt  LICENSE-jthread.txt  LICENSE-ranges.txt  semaphore  source.cpp  tz.cpp
dependencies/c++20/atomic/: atomic_wait  barrier  semaphore  source.cpp
dependencies/c++20/date/: date.h  tz.h
dependencies/c++20/sync/: atomic_wait
dependencies/cute_headers/: cute_tiled.c
dependencies/glFont/: LICENSE.txt
dependencies/glFont/src/: FTLabel.cpp  FTLabel.h  FontAtlas.cpp  FontAtlas.h  GLFont.cpp  GLFont.h
dependencies/glad/: glad.c  glad.h
dependencies/glad/Debug/: glad.c  glad.h
dependencies/glad/glad/: glad.c
dependencies/imgui/: ImCurveEdit.cpp  ImGuizmo.cpp  ImNodes.cpp  ImNodesEz.cpp  ItemRowsBackground.cpp  POTENTIAL ADDONS.txt  TextEditor.cpp  ToggleButton.cpp  imconfig.h  imgui.cpp  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_stdlib.cpp  imgui_tables.cpp  imgui_togglebutton.cpp  imgui_togglebutton.h  imgui_widgets.cpp  imguitabwindow.cpp  imguivariouscontrols.cpp
dependencies/imgui/cpp/: imgui_stdlib.cpp  imgui_stdlib.h
dependencies/imgui/imgui/: imconfig.h  imgui_impl_glfw.h  imgui_stdlib.h
dependencies/lua/: LICENSE.txt
dependencies/nuklear/: nuklear.h  nuklear_glfw_gl4.h
dependencies/sol3/sol/: forward.hpp  sol.hpp
dependencies/tinygltf/: tiny_gltf.h
dependencies/zlib/: LICENSE.txt
galaxy/: .clang-format  CMakeLists.txt  README.md  galaxy.vcxproj  galaxy.vcxproj.filters  temp.cpp
galaxy/celestial/: README.md  celestial.vcxproj  celestial.vcxproj.filters
galaxy/frb/: CMakeLists.txt  README.md  frb.vcxproj  frb.vcxproj.filters
galaxy/galaxy/: CMakeLists.txt  README.md  galaxy.vcxproj  galaxy.vcxproj.filters
galaxy/protostar/: CMakeLists.txt  README.md  protostar.vcxproj  protostar.vcxproj.filters
galaxy/pulsar/: CMakeLists.txt  README.md  pulsar.vcxproj  pulsar.vcxproj.filters
galaxy/quasar/: CMakeLists.txt  README.md  quasar.vcxproj  quasar.vcxproj.filters
galaxy/quasar/shaders/: glyph.vs  line.vs  particle.fs  particle.vs  render_to_texture.vs  sprite.vs  spritebatch.vs  text.fs
galaxy/redshift/: CMakeLists.txt  README.md  redshift.vcxproj  redshift.vcxproj.filters
galaxy/solar/: CMakeLists.txt  README.md  solar.vcxproj  solar.vcxproj.filters
galaxy/src/: MemoryAllocator.cpp
galaxy/starlight/: CMakeLists.txt  README.md  starlight.vcxproj  starlight.vcxproj.filters
galaxy/starmap/: CMakeLists.txt  README.md  starmap.vcxproj  starmap.vcxproj.filters
galaxy/starmap/demo-maps/: demo-zlib.json
legacy/3d/sandbox_3d_tests/: CMakeLists.txt  README.md
lib/: CMakeLists.txt  MemoryAllocator.cpp  dependencies.vcxproj  dependencies.vcxproj.filters
lib/IconFontCppHeaders/: GenerateIconFontCppHeaders.py
lib/SFML-2.6.0/doc/: SFML.tag
lib/SFML-2.6.0/lib/: sfml-graphics-s.lib  sfml-graphics.lib  sfml-network-d.lib  sfml-network-s.lib  sfml-network.lib  sfml-system-s.lib  sfml-system.lib  sfml-window-s.lib  sfml-window.lib
lib/SFML/lib/: sfml-audio-d.lib  sfml-audio-s.lib  sfml-audio.lib  sfml-graphics-d.lib  sfml-main-d.lib  sfml-main.lib  sfml-network-s-d.lib  sfml-system-d.lib  (+2 more)
lib/cute/: LICENSE.txt
lib/cute_headers/: LICENSE.txt  cute_c2.c
lib/entt_sol/: dispatcher.hpp  meta_helper.hpp  registry.hpp  script_process.hpp
lib/glad/: glad.c
lib/imgui/: imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_stdlib.cpp  imgui_stdlib.h  imstb_truetype.h
lib/irrKlang/: LICENSE.txt
lib/miniaudio/: miniaudio.c  miniaudio.cpp  miniaudio.h
lib/nuklear/: LICENSE.txt  Nuklear.hpp  nuklear.c  nuklear.h  nuklear_glfw_gl4.h
lib/pl_mpeg/: LICENSE.txt  pl_mpeg.c  pl_mpeg.cpp  pl_mpeg.h
lib/readwritequeue/: readerwritercircularbuffer.h  readerwriterqueue.h
lib/tinyfiledialogs/: README.txt  tinyfiledialogs.c  tinyfiledialogs.cpp  tinyfiledialogs.h
lib/tson/: tileson.hpp
lib/zlib_ng_win/: LICENSE.txt
sandbox/: CMakeLists.txt  README.md  sandbox.vcxproj  sandbox.vcxproj.filters
sandbox/other/: pulsar_example.cpp  starmap_example.cpp
sandbox/savefiles/: test.sav
sandbox/source/: GameLayer.cpp  GameLayer.hpp  GameLevel.cpp  GameLevel.hpp  GameState.cpp  GameState.hpp  Serialize.cpp  Serialize.hpp  main.cpp
sandbox/src/: GameState.cpp  SandboxLayer.cpp  SandboxLayer.hpp  StateGame.cpp  StateGame.hpp  TestConfig.hpp  main.cpp
sandbox_tests/: CMakeLists.txt  README.md  SandboxTests.vcxproj  SandboxTests.vcxproj.filters  config.json
sandbox_tests/assets/: config.json
sandbox_tests/src/: Sandbox.cpp  Sandbox.hpp  main.cpp
supercluster/: CMakeLists.txt  README.md  Supercluster.vcxproj  Supercluster.vcxproj.filters  atlas.json  config.json  entity.json  spritebatchEntity.json  supercluster.vcxproj  supercluster.vcxproj.filters  untitled.scproj
supercluster/assets/: config.json  sclayout.ini
supercluster/src/: Editor.cpp  Editor.hpp  EditorSink.cpp  EditorSink.hpp  Project.cpp  Project.hpp  Selected.cpp  Selected.hpp  main.cpp
tests/: CMakeLists.txt  README.md  Tests.vcxproj  Tests.vcxproj.filters  gtest.txt  tests.vcxproj  tests.vcxproj.filters
tests/src/: main.cpp
tests/tiled/: desert.json
(+17985 files in other folders)
